[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Environmnent/Train/Train00.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sounds/Train01.ogg" type="AudioStream" id=2]
[ext_resource path="res://Objects/Train.gd" type="Script" id=3]
[ext_resource path="res://Assets/Environmnent/Train/Train04.png" type="Texture" id=4]
[ext_resource path="res://Assets/Environmnent/Train/Train01.png" type="Texture" id=5]
[ext_resource path="res://Assets/Environmnent/Train/Train03.png" type="Texture" id=6]
[ext_resource path="res://Assets/Environmnent/Train/Train02.png" type="Texture" id=7]
[ext_resource path="res://Objects/RandomChild.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2047.14, 501.191 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2036.48, 10.3484 )

[node name="Train" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="RandomChild00" parent="." instance=ExtResource( 8 )]
light_mask = -2147483648
position = Vector2( -4071.72, -816.511 )
scale = Vector2( 20, 15 )

[node name="Train00" type="Sprite" parent="RandomChild00"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 1 )

[node name="Train01" type="Sprite" parent="RandomChild00"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 5 )

[node name="Train02" type="Sprite" parent="RandomChild00"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 7 )

[node name="Train03" type="Sprite" parent="RandomChild00"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 6 )

[node name="Train04" type="Sprite" parent="RandomChild00"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 4 )

[node name="RandomChild01" parent="." instance=ExtResource( 8 )]
light_mask = -2147483648
position = Vector2( 149.078, -816.511 )
scale = Vector2( 20, 15 )

[node name="Train00" type="Sprite" parent="RandomChild01"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 1 )

[node name="Train01" type="Sprite" parent="RandomChild01"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 5 )

[node name="Train02" type="Sprite" parent="RandomChild01"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 7 )

[node name="Train03" type="Sprite" parent="RandomChild01"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 6 )

[node name="Train04" type="Sprite" parent="RandomChild01"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 4 )

[node name="RandomChild02" parent="." instance=ExtResource( 8 )]
light_mask = -2147483648
position = Vector2( 4442.07, -816.511 )
scale = Vector2( 20, 15 )

[node name="Train00" type="Sprite" parent="RandomChild02"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 1 )

[node name="Train01" type="Sprite" parent="RandomChild02"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 5 )

[node name="Train02" type="Sprite" parent="RandomChild02"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 7 )

[node name="Train03" type="Sprite" parent="RandomChild02"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 6 )

[node name="Train04" type="Sprite" parent="RandomChild02"]
light_mask = -2147483648
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 4 )

[node name="CollisionShape00" type="CollisionShape2D" parent="."]
position = Vector2( -929.895, -693.153 )
shape = SubResource( 1 )

[node name="CollisionShape01" type="CollisionShape2D" parent="."]
position = Vector2( 3298.2, -693.153 )
shape = SubResource( 1 )

[node name="CollisionShape02" type="CollisionShape2D" parent="."]
position = Vector2( 7579.51, -693.153 )
shape = SubResource( 1 )

[node name="Noise00" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -1155.19, -394.782 )
scale = Vector2( 1.8, 1.8 )
stream = ExtResource( 2 )
pitch_scale = 0.7
max_distance = 15000.0
attenuation = 0.999999

[node name="Noise01" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 3024.33, -421.712 )
scale = Vector2( 1.8, 1.8 )
stream = ExtResource( 2 )
max_distance = 15000.0
attenuation = 0.999999

[node name="Noise02" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 8035.54, -394.784 )
scale = Vector2( 1.8, 1.8 )
stream = ExtResource( 2 )
pitch_scale = 0.7
max_distance = 15000.0
attenuation = 0.999999

[node name="OnTop" type="Area2D" parent="."]
position = Vector2( 0, 26.8505 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape00" type="CollisionShape2D" parent="OnTop"]
position = Vector2( -929.729, -1229.55 )
shape = SubResource( 2 )

[node name="CollisionShape01" type="CollisionShape2D" parent="OnTop"]
position = Vector2( 3304.94, -1229.55 )
shape = SubResource( 2 )

[node name="CollisionShape02" type="CollisionShape2D" parent="OnTop"]
position = Vector2( 7568.65, -1229.55 )
shape = SubResource( 2 )
